--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <script type="module" src="./js/fluent-components.js"></script>
 </head>
 <body trends>
-	<app-taskbar position="top" start="📺" search="🔍" onstart="dt.toggle.trends" onsearch="dt.toggle.search"></app-taskbar>
+	<app-taskbar position="top" start="./node_modules/@fluentui/svg-icons/icons/video_16_regular.svg" search="./node_modules/@fluentui/svg-icons/icons/search_16_regular.svg" onstart="dt.toggle.trends" onsearch="dt.toggle.search"></app-taskbar>
 	<div class="dt-trends"><span style="color: white;">Loading...</span></div>
     <div class="dt-search">
-        <div class="search">
+        <div class="search-container">
             <fluent-text-field class="search" appearance="outline" placeholder="Search Videos"></fluent-text-field>
             <fluent-button appearance="accent" onclick="dt.render.search();">Search</fluent-button>
         </div>
