--- a/windows/player.html
+++ b/windows/player.html
@@ -13,7 +13,7 @@
 			<fluent-slider class="time" min="0" max="1" value="0" step="1"></fluent-slider>
 			<fluent-button class="volume"><img class="fi" src="../node_modules/@fluentui/svg-icons/icons/speaker_2_16_regular.svg"/></fluent-button>
 			<fluent-slider class="volume" min="0" max="100" value="100" step="1"></fluent-slider>
-			<fluent-select class="playrate">
+			<fluent-select class="playrate" value="1">
 				<fluent-option value="0.5">0.5</fluent-option>
 				<fluent-option value="1">1</fluent-option>
 				<fluent-option value="2">2</fluent-option>
