Add: PWA support (limited)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeskTube</title>
+    <link rel="manifest" href="./manifest.webmanifest">
+    <script src="./pwa.js"></script>
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#222222">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#222222">
     <script src="./js/components/app-taskbar.js"></script>
     <script src="./js/components/app-window.js"></script>
     <script src="./js/components/video-preview.js"></script>
