Add: Communication mechanism between windows

--- a/windows/player.html
+++ b/windows/player.html
@@ -3,6 +3,7 @@
 	<head>
 		<script src="../js/backend-api.js"></script>
 		<script src="./js/player.js"></script>
+		<script src="./js/broadcast.js"></script>
 		<script type="module" src="../js/fluent-components.js"></script>
 		<link rel="stylesheet" href="./css/player.css">
 	</head>
