Add: Liked Page API and Player improventions

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <script src="./js/components/video-preview.js"></script>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/index.css">
     <script src="./js/backend-api.js"></script>
     <script src="./js/desktube.js"></script>
+    <script src="./node_modules/idb-keyval/dist/umd.js"></script>
+    <script src="./js/storage.js"></script>
     <script type="module" src="./js/fluent-components.js"></script>
 </head>
 <body trends>
