Improve the Player window

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="./js/backend-api.js"></script>
+    <script src="./node_modules/image-to-base64/browser.js"></script>
     <script src="./js/desktube.js"></script>
     <script src="./node_modules/idb-keyval/dist/umd.js"></script>
     <script src="./js/storage.js"></script>
