Add liked page and improve the API

--- a/index.html
+++ b/index.html
@@ -32,5 +32,11 @@
         </div>
         <div class="videos"></div>
     </div>
+    <div class="dt-liked">
+        <div class="search-container">
+            <fluent-text-field class="search" appearance="outline" placeholder="Filter Videos"></fluent-text-field>
+        </div>
+        <div class="videos"></div>
+    </div>
 </body>
 </html>
