--- a/windows/player.html
+++ b/windows/player.html
@@ -19,7 +19,10 @@
 			<img draggable="false" class="author" alt="Author">
 		</div>
 		<div class="controls">
-			<fluent-button class="play"><img class="fi" src="../node_modules/@fluentui/svg-icons/icons/pause_16_regular.svg"/></fluent-button>
+			<fluent-button class="play">
+				<img class="fi true" src="../node_modules/@fluentui/svg-icons/icons/pause_16_regular.svg"/>
+				<img class="fi false" src="../node_modules/@fluentui/svg-icons/icons/play_16_regular.svg"/>
+			</fluent-button>
 			<fluent-slider class="time" min="0" max="1" value="0" step="1"></fluent-slider>
 			<fluent-button class="volume"><img class="fi" src="../node_modules/@fluentui/svg-icons/icons/speaker_2_16_regular.svg"/></fluent-button>
 			<fluent-slider class="volume" min="0" max="100" value="100" step="1"></fluent-slider>
