Fix the accessibility of DeskTube and remove some inline event handlers

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 	<div class="dt-trends"><span style="color: white;">Loading...</span></div>
     <div class="dt-search">
         <div class="search-container">
-            <fluent-text-field class="search" appearance="outline" onchange="dt.render.search();" placeholder="Search Videos"></fluent-text-field>
-            <fluent-button appearance="accent" onclick="dt.render.search();">Search</fluent-button>
+            <fluent-text-field class="search" appearance="outline" placeholder="Search Videos"></fluent-text-field>
+            <fluent-button appearance="accent">Search</fluent-button>
         </div>
         <div class="videos"></div>
     </div>
     <div class="dt-liked">
         <div class="search-container">
-            <fluent-text-field class="search" appearance="outline" placeholder="Filter Videos" onkeypress="dt.render.liked_filter();"></fluent-text-field>
-            <fluent-button appearance="accent" onclick="dt.render.liked_filter();">Filter</fluent-button>
+            <fluent-text-field class="search" appearance="outline" placeholder="Filter Videos"></fluent-text-field>
+            <fluent-button appearance="accent">Filter</fluent-button>
         </div>
         <div class="videos"></div>
     </div>
