Add list window

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./js/backend-api.js"></script>
     <script src="./node_modules/image-to-base64/browser.js"></script>
     <script src="./js/desktube.js"></script>
+    <script src="./js/desktube-common.js"></script>
     <script src="./node_modules/idb-keyval/dist/umd.js"></script>
     <script src="./js/storage.js"></script>
     <script type="module" src="./js/fluent-components.js"></script>
