--- a/windows/player.html
+++ b/windows/player.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="../js/backend-api.js"></script>
 		<script src="./js/player.js"></script>
-		<script src="./js/broadcast.js"></script>
+		<script src="../js/desktube-common.js"></script>
 		<script type="module" src="../js/fluent-components.js"></script>
 		<script src="../node_modules/image-to-base64/browser.js"></script>
 		<script src="../node_modules/idb-keyval/dist/umd.js"></script>
