Support WindowControlOverlay for List window

--- a/windows/list.html
+++ b/windows/list.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="../css/components.css">
 	</head>
 	<body>
+		<div class="titlebar">Playlist</div>
         <div class="videos">Loading...</div>
 	</body>
 </html>
