Add Chrome Extension Support

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="./node_modules/idb-keyval/dist/umd.js"></script>
     <script src="./js/storage.js"></script>
     <script type="module" src="./js/fluent-components.js"></script>
+    <link rel="stylesheet" href="./css/extension.css">
+    <script src="./js/extension.js"></script>
 </head>
 <body trends>
 	<app-taskbar position="top" start="./node_modules/@fluentui/svg-icons/icons/video_16_regular.svg" search="./node_modules/@fluentui/svg-icons/icons/search_16_regular.svg" onstart="dt.toggle.trends" onsearch="dt.toggle.search"></app-taskbar>
