--- a/windows/list.html
+++ b/windows/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Playlist</title>
 		<script src="../js/backend-api.js"></script>
 		<script src="./js/list.js"></script>
 		<script src="../js/desktube-common.js"></script>
