--- a/windows/player.html
+++ b/windows/player.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Player</title>
 		<script src="../js/backend-api.js"></script>
 		<script src="./js/player.js"></script>
 		<script src="../js/desktube-common.js"></script>
