Adjust a few settings and add icon for extension

--- a/windows/player.html
+++ b/windows/player.html
@@ -28,10 +28,10 @@
 			<input type="range" class="time" min="0" max="1" value="0" step="1"></fluent-slider>
 			<button class="volume"><img class="fi" src="../assets/fluent-icons/speaker_2_16_regular.svg"/></button>
 			<input type="range" class="volume" min="0" max="100" value="100" step="1"></fluent-slider>
-			<select class="playrate" value="1">
+			<select class="playrate">
 				<option value="0.25">0.25</fluent-option>
 				<option value="0.5">0.5</fluent-option>
-				<option value="1">1</fluent-option>
+				<option value="1" selected>1</fluent-option>
 				<option value="1.5">1.5</fluent-option>
 				<option value="2">2</fluent-option>
 				<option value="3">3</fluent-option>
