Change the name of project since DeskTube is used by old client

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeskTube</title>
+    <title>DeskVideo</title>
     <link rel="manifest" href="./manifest.webmanifest">
     <script src="./pwa.js"></script>
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#222222">
@@ -17,15 +17,15 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="./js/backend-api.js"></script>
     <script src="./js/thirdparty/image-to-base64.js"></script>
-    <script src="./js/desktube.js"></script>
-    <script src="./js/desktube-common.js"></script>
+    <script src="./js/deskvideo.js"></script>
+    <script src="./js/deskvideo-common.js"></script>
     <script src="./js/thirdparty/idb-keyval.js"></script>
     <script src="./js/storage.js"></script>
     <link rel="stylesheet" href="./css/extension.css">
     <script src="./js/extension.js"></script>
 </head>
 <body trends>
-	<app-taskbar position="top" start="./assets/fluent-icons/video_16_regular.svg" search="./assets/fluent-icons/search_16_regular.svg" onstart="dt.toggle.trends" onsearch="dt.toggle.search"></app-taskbar>
+	<app-taskbar position="top" start="./assets/fluent-icons/video_16_regular.svg" search="./assets/fluent-icons/search_16_regular.svg" onstart="dv.toggle.trends" onsearch="dv.toggle.search"></app-taskbar>
 	<div class="dt-trends"><span style="color: white;">Loading...</span></div>
     <div class="dt-search">
         <div class="search-container">
