--- a/windows/list.html
+++ b/windows/list.html
@@ -4,7 +4,7 @@
 		<title>Playlist</title>
 		<script src="../js/backend-api.js"></script>
 		<script src="./js/list.js"></script>
-		<script src="../js/desktube-common.js"></script>
+		<script src="../js/deskvideo-common.js"></script>
 		<script src="../js/thirdparty/idb-keyval.js"></script>
 		<script src="../js/storage.js"></script>
         <script src="../js/components/video-preview.js"></script>
