--- a/windows/player.html
+++ b/windows/player.html
@@ -4,7 +4,7 @@
 		<title>Player</title>
 		<script src="../js/backend-api.js"></script>
 		<script src="./js/player.js"></script>
-		<script src="../js/desktube-common.js"></script>
+		<script src="../js/deskvideo-common.js"></script>
 		<script src="../js/thirdparty/image-to-base64.js"></script>
 		<script src="../js/thirdparty/idb-keyval.js"></script>
 		<script src="../js/storage.js"></script>
