Add settings.json that will be used in Settings Page

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 	<div class="dt-trends"><span style="color: white;">Loading...</span></div>
     <div class="dt-search">
         <div class="search-container">
-            <input class="search" placeholder="Search Videos"/>
+            <input class="search" placeholder="Search Videos" enterkeyhint="search" />
             <button appearance="accent">Search</button>
         </div>
         <div class="videos"></div>
     </div>
     <div class="dt-liked">
         <div class="search-container">
-            <input class="search" placeholder="Filter Videos"/>
+            <input class="search" placeholder="Filter Videos" enterkeyhint="search" />
             <button appearance="accent">Filter</button>
         </div>
         <div class="videos"></div>
