Replace video backend system to Piped since it's well-maintained and more accuracy

--- a/windows/player.html
+++ b/windows/player.html
@@ -15,6 +15,7 @@
 	</head>
 	<body>
 		<video autoplay></video>
+		<audio autoplay></audio>
 		<div class="info">
 			<div class="name"></div>
 			<div class="author"></div>
