Add audio-only mode for Player

--- a/windows/player.html
+++ b/windows/player.html
@@ -15,7 +15,8 @@
 	</head>
 	<body>
 		<video autoplay></video>
-		<audio autoplay></audio>
+		<audio autoplay hidden></audio>
+		<img class="thumbnail" />
 		<div class="info">
 			<div class="name"></div>
 			<div class="author"></div>
@@ -37,6 +38,10 @@
 				<option value="2">2</fluent-option>
 				<option value="3">3</fluent-option>
 			</select>
+			<button class="audio-only">
+				<img class="fi true" src="../assets/fluent-icons/video_16_regular.svg"/>
+				<img class="fi false" src="../assets/fluent-icons/headset_16_regular.svg"/>
+			</button>
 			<button class="pip">
 				<img class="fi false" src="../assets/fluent-icons/picture_in_picture_enter_16_regular.svg"/>
 				<img class="fi true" src="../assets/fluent-icons/picture_in_picture_exit_16_regular.svg"/>
