--- a/windows/player.html
+++ b/windows/player.html
@@ -7,6 +7,7 @@
 		<script src="../js/deskvideo-common.js"></script>
 		<script src="../js/thirdparty/image-to-base64.js"></script>
 		<script src="../js/thirdparty/idb-keyval.js"></script>
+		<script src="../js/thirdparty/hls.min.js"></script>
 		<script src="../js/storage.js"></script>
 		<link rel="stylesheet" href="./css/player.css">
 		<link rel="stylesheet" href="../css/general.css">
