Support captions in Player

--- a/windows/player.html
+++ b/windows/player.html
@@ -39,6 +39,9 @@
 				<option value="2">2</fluent-option>
 				<option value="3">3</fluent-option>
 			</select>
+			<button class="subtitles">
+				<img class="fi" src="../assets/fluent-icons/closed_caption_16_regular.svg" />
+			</button>
 			<button class="audio-only">
 				<img class="fi true" src="../assets/fluent-icons/video_16_regular.svg"/>
 				<img class="fi false" src="../assets/fluent-icons/headset_16_regular.svg"/>
