Improve `dv.conf` behavior

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./js/extension.js"></script>
 </head>
 <body trends>
+    <img class="background" draggable="false"/>
 	<app-taskbar position="top" start="./assets/fluent-icons/video_16_regular.svg" search="./assets/fluent-icons/search_16_regular.svg" onstart="dv.toggle.trends" onsearch="dv.toggle.search"></app-taskbar>
 	<div class="dv-trends"><span style="color: white;">Loading...</span></div>
     <div class="dv-search">
