Make available the Settings Window from main host

--- a/windows/list.html
+++ b/windows/list.html
@@ -9,11 +9,12 @@
 		<script src="../js/storage.js"></script>
         <script src="../js/components/video-preview.js"></script>
 		<link rel="stylesheet" href="./css/list.css">
+		<link rel="stylesheet" href="./css/window-controls.css">
 		<link rel="stylesheet" href="../css/general.css">
         <link rel="stylesheet" href="../css/components.css">
 	</head>
 	<body>
 		<div class="titlebar">Playlist</div>
-        <div class="videos">Loading...</div>
+        <div class="videos content">Loading...</div>
 	</body>
 </html>
