--- a/windows/settings.html
+++ b/windows/settings.html
@@ -8,10 +8,13 @@
 		<script src="../js/deskvideo-common.js"></script>
 		<script src="../js/thirdparty/idb-keyval.js"></script>
 		<script src="../js/storage.js"></script>
-		<script src="../js/conf.js"></script>
 		<link rel="stylesheet" href="./css/settings.css">
+		<link rel="stylesheet" href="./css/window-controls.css">
 		<link rel="stylesheet" href="../css/general.css">
 		<link rel="stylesheet" href="../css/components.css">
 	</head>
-	<body></body>
+	<body>
+		<div class="titlebar">Settings</div>
+		<div class="settings content"></div>
+	</body>
 </html>
