Add splited playing system to Player (core)

--- a/windows/player.html
+++ b/windows/player.html
@@ -16,6 +16,7 @@
 	</head>
 	<body>
 		<video autoplay></video>
+		<canvas></canvas>
 		<audio autoplay hidden></audio>
 		<img class="thumbnail" />
 		<div class="info">
