Improve Backend api and Player

--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
     <div class="dv-search">
         <div class="search-container">
             <input class="search" placeholder="Search Videos" enterkeyhint="search" />
-            <button appearance="accent">Search</button>
+            <button appearance="accent">
+                <img src="./assets/fluent-icons/search_16_regular.svg" draggable="false" />
+            </button>
         </div>
         <div class="videos"></div>
     </div>
     <div class="dv-liked">
         <div class="search-container">
             <input class="search" placeholder="Filter Videos" enterkeyhint="search" />
-            <button appearance="accent">Filter</button>
+            <button appearance="accent">
+                <img src="./assets/fluent-icons/search_16_regular.svg" draggable="false" />
+            </button>
         </div>
         <div class="videos"></div>
     </div>
