Add prev/next button to Player

--- a/windows/player.html
+++ b/windows/player.html
@@ -27,9 +27,15 @@
 		</div>
 		<div class="controls">
 			<div class="scroll-region">
+				<button class="previous">
+					<img draggable="false" class="fi" src="../assets/fluent-icons/arrow_previous_16_regular.svg"/>
+				</button>
 				<button class="play">
 					<img draggable="false" class="fi true" src="../assets/fluent-icons/pause_16_regular.svg"/>
 					<img draggable="false" class="fi false" src="../assets/fluent-icons/play_16_regular.svg"/>
+				</button>
+				<button class="next">
+					<img draggable="false" class="fi" src="../assets/fluent-icons/arrow_next_16_regular.svg"/>
 				</button>
 				<input type="range" class="time" min="0" max="1" value="0" step="1"></fluent-slider>
 				<button class="volume">
