Allow to choose a subtitle

--- a/windows/player.html
+++ b/windows/player.html
@@ -43,16 +43,20 @@
 					<img draggable="false" class="fi false" src="../assets/fluent-icons/speaker_2_16_regular.svg"/>
 				</button>
 				<input type="range" class="volume" min="0" max="100" value="100" step="1"></fluent-slider>
-				<select class="playrate">
-					<option value="0.25">0.25</fluent-option>
-					<option value="0.5">0.5</fluent-option>
-					<option value="1" selected>1</fluent-option>
-					<option value="1.5">1.5</fluent-option>
-					<option value="2">2</fluent-option>
-					<option value="3">3</fluent-option>
-				</select>
+				<button class="playrate">
+					<img draggable="false" class="fi" src="../assets/fluent-icons/shifts_activity_16_regular.svg" />
+					<select>
+						<option value="0.25">0.25</fluent-option>
+						<option value="0.5">0.5</fluent-option>
+						<option value="1" selected>1</fluent-option>
+						<option value="1.5">1.5</fluent-option>
+						<option value="2">2</fluent-option>
+						<option value="3">3</fluent-option>
+					</select>
+				</button>
 				<button class="subtitles">
 					<img draggable="false" class="fi" src="../assets/fluent-icons/subtitles_16_regular.svg" />
+					<select></select>
 				</button>
 				<button class="audio-only">
 					<img draggable="false" class="fi true" src="../assets/fluent-icons/video_16_regular.svg"/>
