Allow to choose video/audio track

--- a/windows/player.html
+++ b/windows/player.html
@@ -48,11 +48,23 @@
 					<select>
 						<option value="0.25">0.25</fluent-option>
 						<option value="0.5">0.5</fluent-option>
+						<option value="0.75">0.75</fluent-option>
 						<option value="1" selected>1</fluent-option>
+						<option value="1.25">1.25</fluent-option>
 						<option value="1.5">1.5</fluent-option>
+						<option value="1.75">1.75</fluent-option>
 						<option value="2">2</fluent-option>
+						<option value="2.5">2.5</fluent-option>
 						<option value="3">3</fluent-option>
 					</select>
+				</button>
+				<button class="audios">
+					<img draggable="false" class="fi" src="../assets/fluent-icons/speaker_edit_16_regular.svg" />
+					<select></select>
+				</button>
+				<button class="videos">
+					<img draggable="false" class="fi" src="../assets/fluent-icons/video_clip_multiple_16_regular.svg" />
+					<select></select>
 				</button>
 				<button class="subtitles">
 					<img draggable="false" class="fi" src="../assets/fluent-icons/subtitles_16_regular.svg" />
