Support gamepads and author page (the page broken atm)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="./js/deskvideo.js"></script>
     <script src="./js/deskvideo-common.js"></script>
+    <script src="./js/gamepad-api.js"></script>
     <script src="./js/backend-api.js"></script>
     <script src="./js/thirdparty/image-to-base64.js"></script>
     <script src="./js/thirdparty/idb-keyval.js"></script>
