--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeskVideo</title>
+    <meta name="google" content="notranslate" />
     <link rel="manifest" href="./manifest.webmanifest">
     <script src="./pwa.js"></script>
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#222222">
