--- a/windows/player.html
+++ b/windows/player.html
@@ -14,15 +14,17 @@
 		<link rel="stylesheet" href="../css/components.css">
 	</head>
 	<body>
-		<video crossorigin="anonymous" autoplay></video>
+		<video crossorigin="anonymous" preload="auto" autoplay></video>
 		<canvas></canvas>
-		<audio crossorigin="anonymous" autoplay hidden></audio>
+		<audio crossorigin="anonymous" preload="auto" autoplay hidden></audio>
 		<img draggable="false" class="thumbnail" />
 		<div class="info">
 			<div class="name"></div>
 			<div class="author"></div>
 			<div class="followers"></div>
-			<img src="../assets/fluent-icons/info_16_regular.svg" draggable="false" class="description" alt="Description" />
+			<button class="description">
+				<img class="fi" src="../assets/fluent-icons/info_16_regular.svg" draggable="false" alt="Description" />
+			</button>
 			<img draggable="false" class="author" alt="Author"/>
 		</div>
 		<div class="controls">
@@ -93,11 +95,11 @@
 				<img draggable="false" class="fi false" src="../assets/fluent-icons/thumb_like_16_regular.svg"/>
 				<img draggable="false" class="fi true" src="../assets/fluent-icons/thumb_like_16_filled.svg"/>
 			</button>
-			<button class="list">
-				<img draggable="false" class="fi" src="../assets/fluent-icons/list_16_regular.svg"/>
-			</button>
 			<button class="comment">
 				<img draggable="false" class="fi" src="../assets/fluent-icons/comment_16_regular.svg"/>
+			</button>
+			<button class="list">
+				<img draggable="false" class="fi" src="../assets/fluent-icons/list_16_regular.svg"/>
 			</button>
 			<button class="share">
 				<img draggable="false" class="fi" src="../assets/fluent-icons/share_16_regular.svg"/>
