Use unproxied playback since proxies is so slow and latency. Volume boost was removed (it's not allowed by CORS)

--- a/windows/player.html
+++ b/windows/player.html
@@ -14,9 +14,9 @@
 		<link rel="stylesheet" href="../css/components.css">
 	</head>
 	<body>
-		<video crossorigin="anonymous" preload="auto" autoplay></video>
+		<video autoplay></video>
 		<canvas></canvas>
-		<audio crossorigin="anonymous" preload="auto" autoplay hidden></audio>
+		<audio autoplay hidden></audio>
 		<img draggable="false" class="thumbnail" />
 		<div class="info">
 			<div class="name"></div>
